--- a/client/src/components/Header/SmallHeader/_smallHeader.scss
+++ b/client/src/components/Header/SmallHeader/_smallHeader.scss
@@ -43,6 +43,22 @@
 
 @media screen and (max-width: 786px) {
   .small-header {
+    width: 100vw;
     display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .small-header {
+    &__options {
+      .title {
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+        padding: 0 0.25rem;
+        height: 32.3px;
+      }
+    }
   }
 }
