--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -115,14 +115,18 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4rem 0 2rem;
+    margin: 0 0rem 0 0rem;
     display: flex;
-    flex-direction: row-reverse;
+    //flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
 
     .activeOption {
       font-size: 1.1rem;
+    }
+
+    .switch {
+      display: none;
     }
   }
 
@@ -142,6 +146,18 @@
   }
 }
 
+@media screen and (max-width: 786px) {
+  .list {
+    &__sort-activeOption {
+      .switch {
+        //border: 2px solid #000;
+        display: flex;
+        margin-right: 2rem;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 640px) {
   .list {
     padding-top: calc(58.6px + 2rem);
@@ -152,9 +168,14 @@
 
     &__sort-activeOption {
       margin: 0 1.25rem 0 1rem;
+      margin: 0;
 
       .activeOption {
         font-size: 1rem;
+      }
+
+      .switch {
+        margin-right: 1rem;
       }
     }
 
