--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -3,6 +3,12 @@
   position: relative;
   display: flex;
 
+  &__switch {
+    //background: #fff;
+    color: #000;
+    margin-right: 1px;
+  }
+
   &__search-bar {
     display: flex;
     align-items: center;
@@ -13,12 +19,12 @@
       input {
         width: 484px;
         border: none;
-        padding: 0.6rem 0.5rem;
+        padding: 0.51rem 0.5rem;
         border-top-right-radius: var(--border-radius-1);
         border-bottom-right-radius: var(--border-radius-1);
-        background: transparent;
-        color: #fff;
-        border-bottom: 1px solid #fff;
+        // background: transparent;
+        color: #000;
+        //border-bottom: 1px solid #fff;
       }
 
       input:focus {
@@ -27,7 +33,7 @@
 
       ::placeholder {
         letter-spacing: 0.5px;
-        color: #fff;
+        color: #000;
       }
 
       input:focus::placeholder {
@@ -35,7 +41,7 @@
       }
 
       span {
-        color: #fff;
+        color: #000;
         position: absolute;
         top: 0.45rem;
         right: 0.3rem;
@@ -61,7 +67,7 @@
     &__search-bar {
       form {
         input {
-          width: 280px;
+          width: 240px;
         }
       }
     }
@@ -70,14 +76,17 @@
 
 @media screen and (max-width: 786px) {
   .search__component {
-    display: none;
+    &__switch {
+      display: none;
+    }
     width: calc(100vw - (88.58px + 3rem));
     &__search-bar {
       width: calc(100vw - (88.58px + 3rem));
       form {
         width: calc(100vw - (88.58px + 3rem));
         input {
-          width: calc(100vw - (88.58px + 3rem + 100px + 2rem));
+          width: calc(100vw - (88.58px + 3rem + 1rem));
+          border-radius: var(--border-radius-1);
         }
       }
     }
@@ -86,13 +95,13 @@
 
 @media screen and (max-width: 640px) {
   .search__component {
-    width: calc(100vw - (60px + 3rem));
+    width: calc(100vw - (74.06px + 2.5rem));
     &__search-bar {
-      width: calc(100vw - (60px + 3rem));
+      width: calc(100vw - (74.06px + 2.5rem));
       form {
-        width: calc(100vw - (60px + 3rem));
+        width: calc(100vw - (74.06px + 2.5rem));
         input {
-          width: calc(100vw - (60px + 3rem + 100px + 1.5rem));
+          width: calc(100vw - (74.06px + 2.5rem + 1rem));
         }
       }
     }
