--- a/client/src/components/TvList/Sort/_sort.scss
+++ b/client/src/components/TvList/Sort/_sort.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius-1);
-    //box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 0 5px #000;
 
     opacity: 0;
     transition: var(--transition);
@@ -58,6 +58,8 @@
 
 @media screen and (max-width: 640px) {
   .sort {
+    margin-left: 1rem;
+
     &__open {
       width: 120px;
       span {
