--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -114,9 +114,9 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4rem 0 2rem;
+    margin: 0 0rem 0 0rem;
     display: flex;
-    flex-direction: row-reverse;
+    //flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
 
@@ -151,6 +151,7 @@
 
     &__sort-activeOption {
       margin: 0 1.25rem 0 1rem;
+      margin: 0;
 
       .activeOption {
         font-size: 1rem;
