--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -58,6 +58,7 @@
 
 @media screen and (max-width: 640px) {
   .search__results {
+    height: 50vh;
     &__inner {
       &__card {
         &__title-date {
