--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -5,10 +5,6 @@
   max-height: 80vh;
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
-  box-shadow: 0 0 5px #000;
-  // background: #000;
-  // color: #fff;
-  //border-top: 4px solid var(--primary);
 
   &__inner {
     padding: 0.5rem;
@@ -92,5 +88,5 @@
 
 /* Handle */
 .scroll-1::-webkit-scrollbar-thumb {
-  background-color: gray;
+  background-color: #999;
 }
