--- a/client/src/components/TvList/Sort/_sort.scss
+++ b/client/src/components/TvList/Sort/_sort.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.6rem 1rem;
+    padding: calc(0.5rem - 1px) 1rem;
     cursor: pointer;
     border-radius: var(--border-radius-1);
 
@@ -26,7 +26,6 @@
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius-1);
-    box-shadow: 0 0 5px #000;
 
     opacity: 0;
     transition: var(--transition);
@@ -35,7 +34,7 @@
     span {
       display: flex;
       align-items: center;
-      padding: 0.5rem 1rem;
+      padding: calc(0.5rem - 1px) 1rem;
       cursor: pointer;
     }
 
