--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -196,11 +196,13 @@
 }
 
 .whiteBorder {
-  border: 2px solid #fff;
+  //border: 1px solid #fff;
+  box-shadow: 0 0 3px #fff;
 }
 
 .blackBorder {
-  border: 2px solid var(--dark-2);
+  //border: 1px solid var(--dark-1);
+  box-shadow: 0 0 3px var(--dark-1);
 }
 
 .greenBg {
