--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -5,9 +5,10 @@
   max-height: 80vh;
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
+  box-shadow: 0 3px 6px #000;
 
   &__inner {
-    padding: 0.5rem;
+    //padding: 0.5rem;
 
     display: flex;
     flex-direction: column;
@@ -16,7 +17,8 @@
       cursor: pointer;
       padding: 0.5rem;
       display: flex;
-      border-radius: var(--border-radius-1);
+      border-bottom: 1px solid #999;
+      //border-radius: var(--border-radius-1);
 
       &__image {
         height: 75px;
@@ -43,6 +45,11 @@
           font-weight: 400;
         }
       }
+    }
+
+    &__card:last-child {
+      margin-bottom: 0;
+      border-bottom: none;
     }
 
     &__card:hover {
