--- a/client/src/components/TvList/TvCard/_tvCard.scss
+++ b/client/src/components/TvList/TvCard/_tvCard.scss
@@ -111,13 +111,13 @@
 .lightCardInfo {
   background: rgba(220, 220, 220, 0.9);
   color: var(--dark-1);
-  //box-shadow: 0 0 3px var(--dark-1);
+  outline: 2px solid var(--dark-1);
 }
 
 .darkCardInfo {
   background: rgba(57, 62, 70, 0.9);
   color: #fff;
-  //box-shadow: 0 0 3px #fff;
+  outline: 2px solid #fff;
 }
 
 @media screen and (max-width: 786px) {
