--- a/client/src/components/MovieList/Sort/_sort.scss
+++ b/client/src/components/MovieList/Sort/_sort.scss
@@ -6,11 +6,11 @@
   background: transparent;
 
   &__open {
-    width: 150px;
+    width: 130px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: calc(0.5rem - 1px) 1rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     border-radius: var(--border-radius-1);
 
@@ -22,10 +22,11 @@
   &__close {
     position: absolute;
     z-index: -1;
-    width: calc(182px - 0px);
+    width: 162px;
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius-1);
+    box-shadow: 0 3px 6px #000;
 
     opacity: 0;
     transition: var(--transition);
@@ -35,7 +36,7 @@
       display: flex;
       align-items: center;
       padding: calc(0.5rem - 1px) 1rem;
-      border-bottom: 1px solid #999;
+      //border-bottom: 1px solid #999;
       cursor: pointer;
     }
 
