--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -5,6 +5,7 @@
   max-height: 80vh;
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
+  box-shadow: 0 3px 6px #000;
 
   &__inner {
     display: flex;
