--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -310,6 +310,7 @@ body {
 @import '../other/WatchlistIcon/watchlistIcon';
 @import '../other/MenuIcon/menuIcon';
 @import '../other/Options/options';
+@import '../other/Switch/switch';
 
 body::-webkit-scrollbar {
   width: 8px; /* width of the entire scrollbar */
