--- a/client/src/other/Switch/_switch.scss
+++ b/client/src/other/Switch/_switch.scss
@@ -5,37 +5,34 @@
     margin: 0;
     display: flex;
     align-items: center;
-    height: 37.6px;
-    padding: 0 1rem;
     border-radius: var(--border-radius-1);
   }
 
   &__gap {
     margin: 0 0.5rem;
-    border-left: 0.5px solid #000;
-    border-right: 0.5px solid #000;
   }
 }
 
 .darkGapBorder {
+  border-left: 0.5px solid var(--dark-1);
+  border-right: 0.5px solid var(--dark-1);
 }
 
 .lightGapBorder {
+  border-left: 0.5px solid #fff;
+  border-right: 0.5px solid #fff;
 }
 
 @media screen and (max-width: 640px) {
   .switch {
     &__movie,
     &__tv {
-      font-size: 0.9rem;
-      height: 35.2px;
-      padding: 0 0.5rem;
+      font-size: 1rem;
     }
   }
 }
 
 .activeSwitch {
-  background: var(--primary);
-  color: #000;
+  color: var(--red) !important;
   font-weight: 700 !important;
 }
