--- a/client/src/components/Header/SmallHeader/_smallHeader.scss
+++ b/client/src/components/Header/SmallHeader/_smallHeader.scss
@@ -36,6 +36,11 @@
       cursor: pointer;
       color: #fff;
     }
+
+    .search-icon:hover {
+      color: var(--primary);
+      transition: var(--transition);
+    }
   }
 }
 
