--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -148,6 +148,7 @@
 @media screen and (max-width: 786px) {
   .list {
     &__sort-activeOption {
+      margin: 0 3rem 0rem 0rem;
       flex-direction: row-reverse;
 
       .switch {
@@ -171,10 +172,6 @@
 
       .switch {
         margin-left: 0.5rem;
-      }
-
-      .activeOption {
-        font-size: 1rem;
       }
     }
 
