--- a/client/src/other/Switch/_switch.scss
+++ b/client/src/other/Switch/_switch.scss
@@ -1,6 +1,7 @@
 .switch {
   &__movie,
   &__tv {
+    font-size: 0.8rem;
     cursor: pointer;
     margin: 0;
     display: flex;
@@ -27,12 +28,12 @@
   .switch {
     &__movie,
     &__tv {
-      font-size: 1rem;
+      //font-size: 1rem;
     }
   }
 }
 
 .activeSwitch {
-  color: var(--red) !important;
+  font-size: 1.1rem !important;
   font-weight: 700 !important;
 }
