--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -115,7 +115,7 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4rem 0rem 0rem;
+    margin: 0 4rem 0rem 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -148,7 +148,7 @@
 @media screen and (max-width: 786px) {
   .list {
     &__sort-activeOption {
-      margin: 0 3rem 0rem 0rem;
+      margin: 0 3rem 0rem 1rem;
       flex-direction: row-reverse;
 
       .switch {
@@ -168,7 +168,7 @@
     }
 
     &__sort-activeOption {
-      margin: 0 1.25rem 0 0;
+      margin: 0 1.25rem 0 0.5rem;
 
       .switch {
         margin-left: 0.5rem;
