--- a/client/src/other/Switch/_switch.scss
+++ b/client/src/other/Switch/_switch.scss
@@ -1,17 +1,33 @@
-.switch {
+.switch__component {
+  display: flex;
+  align-items: center;
+
+  border-radius: 5px;
+
   &__movie,
   &__tv {
-    font-size: 0.8rem;
+    height: 37.6px;
+    width: 100px;
     cursor: pointer;
     margin: 0;
     display: flex;
     align-items: center;
-    border-radius: var(--border-radius-1);
+    justify-content: center;
   }
 
-  &__gap {
-    margin: 0 0.5rem;
+  &__movie {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
   }
+
+  &__tv {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+
+  // &__gap {
+  //   margin: 0 0.5rem;
+  // }
 }
 
 .darkGapBorder {
@@ -25,15 +41,20 @@
 }
 
 @media screen and (max-width: 640px) {
-  .switch {
+  .switch__component {
     &__movie,
     &__tv {
-      //font-size: 1rem;
+      width: 80px;
+      font-size: 0.8rem;
+      height: 35.2px;
     }
   }
 }
 
 .activeSwitch {
-  font-size: 1.1rem !important;
-  font-weight: 700 !important;
+  font-weight: 500 !important;
+  background: var(--red) !important;
+  color: #fff !important;
+  border-radius: 5px !important;
+  box-shadow: 2px 0px 3px #000;
 }
