--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -216,6 +216,7 @@
 .activeCategory {
   background: var(--primary) !important;
   color: #000 !important;
+  font-weight: 500 !important;
   //border-radius: 50px !important;
 }
 
