--- a/client/src/components/TvList/TvCard/_tvCard.scss
+++ b/client/src/components/TvList/TvCard/_tvCard.scss
@@ -21,7 +21,7 @@
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background: #000;
+    background: rgba(0, 0, 0, 0.6);
     color: #fff;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
