--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -55,7 +55,7 @@
       justify-content: center;
 
       .watchlist {
-        padding: 0.25rem;
+        padding: 0.5rem;
         font-weight: 500;
         text-decoration: none;
         color: #fff;
@@ -98,7 +98,7 @@
         margin-left: 1rem;
         background: #000;
         color: #fff;
-        padding: 0.25rem;
+        padding: 0.5rem;
       }
 
       .home-icon {
@@ -119,7 +119,7 @@
           margin-left: 1rem;
           background: #000;
           color: #fff;
-          padding: 0.25rem;
+          padding: 0.5rem;
         }
 
         .close-icon {
@@ -190,6 +190,7 @@
         .home-icon,
         .mode-icon {
           margin-left: 0;
+          //padding: 0.25rem;
         }
 
         .mode-icon {
@@ -202,6 +203,7 @@
           .login-icon {
             margin-left: 0;
             margin-right: 0;
+            //padding: 0.25rem;
           }
         }
 
