--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -5,7 +5,9 @@
   max-height: 80vh;
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
-  box-shadow: 0 3px 6px #000;
+  box-shadow: 0 3px 10px #000;
+
+  //border: 2px solid var(--primary);
 
   &__inner {
     display: flex;
@@ -16,11 +18,13 @@
       cursor: pointer;
       padding: 0.5rem;
       display: flex;
-      border-bottom: 1px solid #999;
+      border-radius: var(--border-radius-1);
+      box-shadow: 0px 12px 10px -15px #000;
+      margin-bottom: 0.5rem;
 
       &__image {
         height: 75px;
-        margin-right: 0.5rem;
+        margin-right: 1rem;
         border-radius: var(--border-radius-1);
 
         img {
@@ -36,12 +40,12 @@
         span:first-child {
           font-size: 1rem;
           font-weight: 500;
-          margin-bottom: 0.5rem;
+          margin-bottom: 0.25rem;
         }
 
         span:last-child {
           font-size: 1rem;
-          font-weight: 500;
+          font-weight: 400;
           color: #999;
         }
       }
