--- a/client/src/components/MovieList/Sort/_sort.scss
+++ b/client/src/components/MovieList/Sort/_sort.scss
@@ -7,10 +7,11 @@
 
   &__open {
     width: 130px;
+    height: 37.6px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: 0rem 1rem;
     cursor: pointer;
     border-radius: var(--border-radius-1);
 
@@ -33,9 +34,10 @@
     margin-top: 0.25rem;
 
     span {
+      height: 37.6px;
       display: flex;
       align-items: center;
-      padding: calc(0.5rem - 1px) 1rem;
+      padding: 0 1rem;
       //border-bottom: 1px solid #999;
       cursor: pointer;
     }
@@ -64,6 +66,7 @@
 
     &__open {
       width: 120px;
+      height: 35.2px;
 
       span {
         font-size: 0.9rem;
@@ -73,6 +76,7 @@
       width: 152px;
 
       span {
+        height: 35.2px;
         font-size: 0.9rem;
       }
     }
