--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -1,15 +1,23 @@
 .card {
+  position: relative;
   border-radius: var(--border-radius-1);
-  height: 350px;
   position: relative;
   user-select: none;
   border-radius: var(--border-radius-1);
 
   &--image {
+    position: relative;
+    display: inline-block;
     width: 100%;
     height: 350px;
-    object-fit: cover;
-    border-radius: var(--border-radius-1);
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+      border-radius: var(--border-radius-1);
+    }
   }
 
   &__btn,
@@ -22,6 +30,7 @@
     height: 35px;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.6);
+    color: #fff;
     border-top-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
 
@@ -35,58 +44,82 @@
 
   &__info {
     text-decoration: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: var(--border-radius-1);
-    opacity: 0;
-    transition: var(--transition);
+    padding: 0.5rem;
+    position: relative;
+    margin: 0;
+    margin-top: -0.5rem;
 
+    min-height: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
 
-    &--rating {
-      margin: 1rem 0 0 0;
-      padding: 0.3rem 0.6rem;
-      border-radius: var(--border-radius-1);
+    p {
       font-weight: 500;
+      margin: 0 0 0.5rem 0;
     }
 
-    &__inner {
+    &__date-rating {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-
-      &--title {
-        margin: 0 1rem;
-        text-align: center;
-        font-size: 1.1rem;
-        font-weight: 500;
-      }
+      justify-content: space-between;
 
       &--date {
-        margin: 1rem 0;
-        font-size: 0.9rem;
-        font-weight: 400;
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 0.85rem;
+        padding: 0.5rem 1rem;
+      }
+
+      &--rating {
+        margin: 0;
+        padding: 0.5rem;
+        margin-bottom: 0 !important;
       }
     }
+  }
+}
 
-    &--more {
-      text-decoration: none;
-      margin-bottom: 1rem;
-      padding: 0.5rem 1rem;
-      font-weight: 400;
-      border-radius: var(--border-radius-1);
+.card:hover .card--image img {
+  transform: scale(1.2);
+  transition: var(--transition);
+}
+
+@media screen and (max-width: 786px) {
+  .card {
+    &--image {
+      height: 300px;
     }
 
-    &--more:hover {
-      transform: scaleX(1.1);
-      transition: var(--transition);
+    &__info {
+      //min-height: 75px;
+
+      p {
+        font-size: 0.9rem;
+      }
+
+      &__date-rating {
+        &--date {
+          font-size: 0.75rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .card {
+    &--image {
+      height: 250px;
+    }
+
+    &__info {
+      &__date-rating {
+        span:last-child {
+          font-size: 0.8rem;
+          padding: 0.25rem;
+        }
+      }
     }
   }
 }
@@ -97,39 +130,4 @@
 
 .darkBookmarkBorder {
   border: 4px solid var(--dark-2);
-}
-
-@media screen and (max-width: 786px) {
-  .card {
-    height: 280px;
-    &--image {
-      height: 280px;
-    }
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .card {
-    height: 250px;
-    &--image {
-      height: 250px;
-    }
-    &__info {
-      &--rating {
-        font-size: 0.8rem;
-      }
-      &__inner {
-        &--title {
-          font-size: 0.9rem;
-        }
-        &--date {
-          font-size: 0.8rem;
-        }
-      }
-
-      &--more {
-        font-size: 0.8rem;
-      }
-    }
-  }
 }
