--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -126,11 +126,11 @@
 
   &__movies {
     max-width: 1280px;
-    margin: 4rem 2rem 3rem 2rem;
+    margin: 4rem 2rem 5rem 2rem;
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 3rem 2rem;
+    gap: 8rem 2rem;
   }
 }
 
@@ -150,6 +150,10 @@
         display: flex;
         margin-left: 1rem;
       }
+    }
+
+    &__movies {
+      gap: 5rem 2rem;
     }
   }
 }
