--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -25,7 +25,7 @@
   --dark-2: #222222;
 
   --dark-1: #222831;
-  --dark-1: #444444;
+  --dark-1: #333333;
 
   //--dark-2: #222222;
   //--dark-2: #1f1f1f;
@@ -232,7 +232,7 @@
 }
 
 .orangeBg {
-  background-color: orange;
+  background-color: darkorange;
   color: #fff !important;
 }
 
