--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -5,7 +5,7 @@
   right: 0;
   width: 100vw;
 
-  z-index: 4;
+  z-index: 5;
 
   display: flex;
   align-items: center;
@@ -53,17 +53,22 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      //background: var(--primary);
+      border-radius: var(--border-radius-1);
+      padding: 0.25rem;
 
       .watchlist {
         padding: 0.5rem;
         font-weight: 500;
         text-decoration: none;
+        //background: var(--primary);
         color: #fff;
+        border-radius: var(--border-radius-1);
         cursor: pointer;
         margin: 0;
         display: flex;
         align-items: center;
-        margin-left: 1rem;
+        margin-left: 0.5rem;
 
         p {
           display: none;
@@ -71,8 +76,8 @@
           position: relative;
           width: 30px;
           height: 30px;
-          background: var(--primary);
-          color: #000;
+          //background: var(--primary);
+          color: #fff;
           border-radius: 50%;
 
           span {
@@ -85,20 +90,23 @@
       }
 
       .watchlist:hover {
-        color: var(--primary);
+        //color: var(--primary);
+        filter: brightness(80%);
         transition: var(--transition);
       }
 
       .home-icon,
       .mode-icon {
+        font-weight: 500;
         text-decoration: none;
         display: flex;
         align-items: center;
         cursor: pointer;
-        margin-left: 1rem;
-        background: #000;
+        margin-left: 0.5rem;
+        border-radius: var(--border-radius-1);
+        //background: var(--primary);
         color: #fff;
-        padding: 0.5rem;
+        padding: 0.5rem 0.5rem;
       }
 
       .home-icon {
@@ -111,15 +119,16 @@
         .user-icon,
         .close-icon,
         .login-icon {
+          font-weight: 500;
           text-decoration: none;
           display: flex;
           align-items: center;
           border-radius: var(--border-radius-1);
           cursor: pointer;
-          margin-left: 1rem;
-          background: #000;
+          margin-left: 0.5rem;
+          //background: var(--primary);
           color: #fff;
-          padding: 0.5rem;
+          padding: 0.5rem 0.5rem;
         }
 
         .close-icon {
@@ -137,8 +146,10 @@
 
       .user-icon:hover,
       .login-icon:hover,
-      .home-icon:hover {
-        color: var(--primary);
+      .home-icon:hover,
+      .mode-icon:hover {
+        //color: var(--primary);
+        filter: brightness(80%);
         transition: var(--transition);
       }
 
@@ -179,6 +190,10 @@
 
       &__two {
         width: calc(100vw - (20% + 0.5rem));
+        //width: 100vw;
+        //margin-right: 2rem;
+        background: #000;
+
         &__menu-icon {
           cursor: pointer;
           display: flex;
@@ -190,6 +205,8 @@
         .home-icon,
         .mode-icon {
           margin-left: 0;
+          background: #000;
+          color: #fff;
           //padding: 0.25rem;
         }
 
@@ -203,7 +220,8 @@
           .login-icon {
             margin-left: 0;
             margin-right: 0;
-            //padding: 0.25rem;
+            background: #000;
+            color: #fff;
           }
         }
 
@@ -215,6 +233,8 @@
 
 .activeRoute {
   background: var(--primary) !important;
+  //background: #000 !important;
   color: #000 !important;
+  //color: var(--primary) !important;
   border-radius: 50% !important;
 }
