--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   min-height: 100vh;
-  z-index: 4;
+  z-index: 5;
   top: 0;
   left: 0;
   right: 0;
@@ -20,6 +20,8 @@
     width: 100%;
     margin-left: 8px;
     box-shadow: 0px 15px 10px -15px #111;
+    border-bottom-left-radius: var(--border-radius-1);
+    border-bottom-right-radius: var(--border-radius-1);
 
     .title-close {
       padding: 1rem 2rem;
