--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -1,6 +1,5 @@
 .card {
   position: relative;
-  border-radius: var(--border-radius-1);
   position: relative;
   user-select: none;
   border-radius: var(--border-radius-1);
@@ -11,6 +10,7 @@
     width: 100%;
     height: 350px;
     overflow: hidden;
+    border-radius: var(--border-radius-1);
 
     img {
       width: 100%;
@@ -54,7 +54,10 @@
     flex-direction: column;
     justify-content: space-between;
 
-    p {
+    border-bottom-left-radius: var(--border-radius-1);
+    border-bottom-right-radius: var(--border-radius-1);
+
+    &--title {
       font-weight: 500;
       margin: 0 0 0.5rem 0;
     }
@@ -62,6 +65,7 @@
     &__date-rating {
       display: flex;
       justify-content: space-between;
+      border-radius: var(--border-radius-1);
 
       &--date {
         display: flex;
@@ -73,8 +77,21 @@
 
       &--rating {
         margin: 0;
-        padding: 0.5rem;
         margin-bottom: 0 !important;
+
+        height: 35px;
+        width: 35px;
+        position: relative;
+
+        border-top-right-radius: var(--border-radius-1);
+        border-bottom-right-radius: var(--border-radius-1);
+
+        span {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
     }
   }
@@ -90,20 +107,6 @@
     &--image {
       height: 300px;
     }
-
-    &__info {
-      //min-height: 75px;
-
-      p {
-        font-size: 0.9rem;
-      }
-
-      &__date-rating {
-        &--date {
-          font-size: 0.75rem;
-        }
-      }
-    }
   }
 }
 
@@ -114,7 +117,20 @@
     }
 
     &__info {
+      min-height: 75px;
+
+      &--title {
+        font-size: 0.8rem;
+        //font-weight: 400;
+      }
+
       &__date-rating {
+        &--date {
+          font-size: 0.75rem;
+          padding: 0.25rem 0.25rem 0.25rem 0.5rem;
+          font-weight: 400;
+        }
+
         span:last-child {
           font-size: 0.8rem;
           padding: 0.25rem;
