--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -28,6 +28,7 @@
       transition: var(--transition);
       border-bottom-left-radius: var(--border-radius-1);
       border-bottom-right-radius: var(--border-radius-1);
+      transition: var(--transition);
     }
 
     &__cover {
@@ -115,8 +116,9 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4rem 0rem 0rem;
+    margin: 0 2.75rem 0rem 2rem;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
 
@@ -125,7 +127,7 @@
     }
 
     .switch {
-      display: none;
+      //display: none;
     }
   }
 
@@ -135,7 +137,7 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 8rem 2rem;
+    gap: 4rem 2rem;
   }
 }
 
@@ -182,7 +184,7 @@
     &__movies {
       margin: 4rem 1rem 3rem 1rem;
 
-      grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
       gap: 2rem 1rem;
 
       margin-top: 2rem;
