--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -4,14 +4,16 @@
   display: flex;
 
   &__switch {
-    //background: #fff;
     color: #000;
-    margin-right: 1px;
+    border-radius: var(--border-radius-1);
   }
 
   &__search-bar {
     display: flex;
     align-items: center;
+    background: #fff;
+    border-top-right-radius: var(--border-radius-1);
+    border-bottom-right-radius: var(--border-radius-1);
 
     form {
       position: relative;
@@ -20,12 +22,11 @@
         width: 484px;
         width: 40vw;
         border: none;
-        padding: 0.51rem 0.5rem;
+        height: 32.3px;
+        padding: 0rem 0.5rem;
         border-top-right-radius: var(--border-radius-1);
         border-bottom-right-radius: var(--border-radius-1);
-        // background: transparent;
         color: #000;
-        //border-bottom: 1px solid #fff;
       }
 
       input:focus {
@@ -46,6 +47,7 @@
         position: absolute;
         top: 0.45rem;
         right: 0.3rem;
+        //display: none;
       }
     }
 
@@ -75,41 +77,86 @@
   }
 }
 
-@media screen and (max-width: 786px) {
+@media screen and (max-width: 786px){
   .search__component {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &__switch {
-      display: none;
+     // display: none;
     }
-    width: calc(100vw - (88.58px + 3rem));
+
     &__search-bar {
-      width: calc(100vw - (88.58px + 3rem));
+      width: 100%;
+      //width:max-content;
+      border: 2px solid var(--primary);
+
       form {
-        width: calc(100vw - (88.58px + 3rem));
+        width: 100%;
         input {
-          // display: flex;
-          // align-items: center;
-          // padding: 0 0.5rem;
-          // height: 58.4px;
-          width: calc(100vw - (88.58px + 3rem + 1rem));
-          border-radius: var(--border-radius-1);
+          width: 90%;
+        }
+
+        span {
+          //display: none;
         }
       }
     }
   }
 }
 
-@media screen and (max-width: 640px) {
-  .search__component {
-    display: none;
-    width: calc(100vw - (74.06px + 2.5rem));
-    &__search-bar {
-      width: calc(100vw - (74.06px + 2.5rem));
-      form {
-        width: calc(100vw - (74.06px + 2.5rem));
-        input {
-          width: calc(100vw - (74.06px + 2.5rem + 1rem));
-        }
-      }
-    }
-  }
-}
+// @media screen and (max-width: 786px) {
+//   .search__component {
+//     // background: aqua;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     z-index: 10;
+//     height: 100vh;
+//     width: 100vw;
+
+//     align-items: flex-start;
+//     justify-content: center;
+
+//     &__switch {
+//       display: none;
+//     }
+//     //width: calc(100vw - (88.58px + 3rem));
+//     &__search-bar {
+//       border: 2px solid var(--primary);
+//       margin-top: 2rem;
+//       width: 90%;
+//       //width: calc(100vw - (88.58px + 3rem));
+//       form {
+//         width: 90%;
+//         //width: calc(100vw - (88.58px + 3rem));
+//         input {
+//           width: 90%;
+//           //width: calc(100vw - (88.58px + 3rem + 1rem));
+//           border-radius: var(--border-radius-1);
+//         }
+
+//         span {
+//           right: -3.5rem;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 640px) {
+//   .search__component {
+//     display: none;
+//     width: calc(100vw - (74.06px + 2.5rem));
+//     &__search-bar {
+//       width: calc(100vw - (74.06px + 2.5rem));
+//       form {
+//         width: calc(100vw - (74.06px + 2.5rem));
+//         input {
+//           width: calc(100vw - (74.06px + 2.5rem + 1rem));
+//         }
+//       }
+//     }
+//   }
+// }
