--- a/client/src/components/TvList/_tvList.scss
+++ b/client/src/components/TvList/_tvList.scss
@@ -114,7 +114,7 @@
   }
 
   &__sort-activeOption {
-    margin: 0 4.25rem 0 0rem;
+    //margin: 0 4.25rem 0 0rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -130,7 +130,7 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 8rem 2rem;
+    gap: 4rem 2rem;
   }
 }
 
@@ -181,7 +181,7 @@
     &__movies {
       margin: 4rem 1rem 3rem 1rem;
 
-      grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
       gap: 2rem 1rem;
 
       margin-top: 2rem;
