--- a/client/src/other/VideoPlayer/_videoPlayer.scss
+++ b/client/src/other/VideoPlayer/_videoPlayer.scss
@@ -1,13 +1,10 @@
-.video-responsive {
-  position: absolute;
-  width: 100%;
+ .frame {
   height: 100%;
+  border-radius: var(--border-radius-1);
 }
 
-.video-responsive iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 786px){
+  .frame {
+    border-radius: 0;
+  }
 }
