--- a/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
+++ b/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
@@ -2,9 +2,11 @@
   position: relative;
   margin-right: 1rem;
   width: 292px;
+  border-radius: var(--border-radius-1);
 
   iframe {
     width: 292px;
+    border-radius: var(--border-radius-1);
   }
 
   .cover {
