--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -97,7 +97,7 @@
   }
 }
 
-.card:hover .card--image img {
+.card:hover .card--image .img {
   transform: scale(1.2);
   transition: var(--transition);
 }
