--- a/client/src/components/CastBackdropsVideo/Backdrops/Backdrop/_backdrop.scss
+++ b/client/src/components/CastBackdropsVideo/Backdrops/Backdrop/_backdrop.scss
@@ -2,9 +2,11 @@
   margin-right: 1rem;
   cursor: pointer;
   width: 292px;
+  border-radius: var(--border-radius-1);
 
   img {
     width: 292px;
+    border-radius: var(--border-radius-1);
   }
 
   img:hover {
