--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -26,7 +26,7 @@
 
   --dark-1: #222831;
   --dark-1: #333333;
-  --dark-1: #444444;
+  //--dark-1: #444444;
 
   //--dark-2: #222222;
   //--dark-2: #1f1f1f;
@@ -45,7 +45,7 @@
   --darkAplha-5: rgba(34, 34, 34, 0.9);
   --darkAlpha-6: rgba(34, 34, 34, 0.9);
 
-  --border-radius-1: 0px;
+  --border-radius-1: 5px;
   --border-radius-2: 10px;
   --border-radius-2: 15px;
 
