--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -27,7 +27,7 @@
         margin-right: 1rem;
         border-radius: var(--border-radius-1);
 
-        img {
+        .img {
           height: 75px;
           border-radius: var(--border-radius-1);
         }
