--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -57,6 +57,7 @@
     margin-bottom: 2rem;
 
     &--image {
+      //width: 300px;
       height: 450px;
       margin-right: 0.5rem;
       border-radius: var(--border-radius-1);
