--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -318,6 +318,9 @@ body {
 @import '../components/CastBackdropsVideo/Videos/videos';
 @import '../components/CastBackdropsVideo/Videos/Video/video';
 
+@import '../components/Reviews/reviews';
+@import '../components/Reviews/Review/review';
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
