--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -185,7 +185,7 @@
   //box-shadow: 0px 15px 10px -15px #111;
   background: linear-gradient(
     to right top,
-    rgba(34, 34, 34, 1) 20%,
+    rgb(51, 51, 51, 1) 20%,
     rgba(34, 34, 34, 0)
   );
 }
