--- a/client/src/components/CastBackdropsVideo/Backdrops/Backdrop/_backdrop.scss
+++ b/client/src/components/CastBackdropsVideo/Backdrops/Backdrop/_backdrop.scss
@@ -26,5 +26,11 @@
 }
 
 .backdrop:last-child {
-  margin-right: 0;
+  margin-right: 0rem;
+}
+
+@media screen and (max-width: 786px) {
+  .backdrop:last-child {
+    margin-right: 1rem;
+  }
 }
