--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -236,9 +236,9 @@
 }
 
 .activeRoute {
-  background: var(--primary) !important;
-  //background: #000 !important;
-  color: #000 !important;
-  //color: var(--primary) !important;
+  //background: var(--primary) !important;
+  background: #000 !important;
+  //color: #000 !important;
+  color: var(--primary) !important;
   border-radius: 50% !important;
 }
