--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -56,14 +56,14 @@
     padding: 0rem 1rem;
 
     &__title {
-      font-size: 1.2rem;
+      //font-size: 1.2rem;
 
       .length {
-        height: 30px;
-        width: 30px;
+        //height: 30px;
+        //width: 30px;
 
         span {
-          font-size: 0.7rem;
+          //font-size: 0.7rem;
         }
       }
     }
