--- a/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
+++ b/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
+  padding-left: 0;
   cursor: pointer;
   border-radius: var(--border-radius-1);
   width: fit-content;
@@ -32,16 +33,21 @@
   }
 }
 
+.actor:last-child {
+  padding-right: 1rem;
+}
+
 .actor:hover .actor__image .img {
-  //filter: brightness(80%);
+  filter: brightness(80%);
   //transform: rotate(360deg);
-  box-shadow: 0 0 25px #000;
+  //box-shadow: 0 0 25px #000;
   transition: var(--transition);
 }
 
 @media screen and (max-width: 786px) {
   .actor {
     padding: 0.25rem 0.5rem;
+    padding-left: 0;
     flex-direction: column;
 
     &__image {
@@ -77,16 +83,17 @@
   .actor {
     flex-direction: column;
     padding: 0.25rem 0.5rem;
+    padding-left: 0;
     //padding: 0;
 
     &__image {
       margin: 0;
-      width: 125px;
-      height: 125px;
+      width: 150px;
+      height: 150px;
 
       .img {
-        width: 125px;
-        height: 125px;
+        width: 150px;
+        height: 150px;
       }
     }
 
