--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -114,14 +114,15 @@
 @media screen and (max-width: 640px) {
   .card {
     &--image {
-      height: 250px;
+      height: 220px;
     }
 
     &__info {
-      min-height: 75px;
+      min-height: 85px;
 
       &--title {
-        font-size: 0.8rem;
+        //font-weight: 400;
+        font-size: 0.9rem;
         //font-weight: 400;
       }
 
@@ -132,9 +133,13 @@
           font-weight: 400;
         }
 
-        span:last-child {
-          font-size: 0.8rem;
-          padding: 0.25rem;
+        &--rating {
+          height: 25px;
+          width: 25px;
+
+          span {
+            font-size: 0.8rem;
+          }
         }
       }
     }
